--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 <script>
     let year = parseInt(prompt("enter a year"));
     if (year % 4 == 0) {
-
+        if (year % 100 == 0) {
+            if (year % 400 == 0) {
+                alert(year + "is a leap year");
+            }else {
+                alert(year + "is NOT leap year");
+            }
+        }else {
+            alert(year + "is a leap year")
+        }
+        }else {
+        alert(year + "is NOT leap year")
     }
 </script>
 </body>
